--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,6 @@ plugins {
     id "com.avast.gradle.docker-compose" version "0.14.0"
     id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
     id "net.ltgt.errorprone" version "2.0.2" apply false
-
 }
 
 defaultTasks 'check'
@@ -33,14 +32,19 @@ subprojects {
     apply plugin: 'maven-publish'
     apply plugin: 'signing'
 
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(11)
+        }
+    }
+
     checkstyle {
         configFile = rootProject.file('gradle/config/checkstyle/checkstyle.xml')
         toolVersion = '8.5'
     }
 
     dependencies {
-        errorprone("com.google.errorprone:error_prone_core:2.3.4")
-        errorproneJavac("com.google.errorprone:javac:9+181-r4173-1")
+        errorprone("com.google.errorprone:error_prone_core:2.13.1")
     }
 
     pmd {
