--- a/.github/workflows/gradle-wrapper-validation.yml
+++ b/.github/workflows/gradle-wrapper-validation.yml
@@ -1,10 +1,21 @@
-name: "Validate Gradle Wrapper"
+name: Java CI
+
 on: [push, pull_request]
 
 jobs:
-  validation:
-    name: "Validation"
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: gradle/wrapper-validation-action@v1
+    build:
+        runs-on: ubuntu-latest
+
+        steps:
+            - uses: actions/checkout@v3
+            - name: Set up JDK 11
+              uses: actions/setup-java@v3
+              with:
+                  java-version: '11'
+                  distribution: 'adopt'
+            - name: Validate Gradle wrapper
+              uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
+            - name: Build with Gradle
+              uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
+              with:
+                  arguments: check
