--- a/.github/workflows/gradle-wrapper-validation.yml
+++ b/.github/workflows/gradle-wrapper-validation.yml
@@ -1,12 +1,11 @@
 name: Java CI
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
     build:
         name: build
         runs-on: ubuntu-latest
-
         steps:
             - uses: actions/checkout@v3
             - name: Set up JDK 17
