--- a/.github/workflows/gradle-wrapper-validation.yml
+++ b/.github/workflows/gradle-wrapper-validation.yml
@@ -1,18 +1,16 @@
-name: Java CI
-
+name: RatelimitJ CI
 on: [push]
-
 jobs:
     build:
         name: build
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
-            - name: Set up JDK 17
+            - name: Set up JDK 11
               uses: actions/setup-java@v3
               with:
-                  java-version: '17'
-                  distribution: 'adopt'
+                  java-version: '11'
+                  distribution: 'temurin'
             - name: Validate Gradle wrapper
               uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
             - name: Build with Gradle
